<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context="com.intellisense.review.activities.More_Info_Activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_served" />


    <Spinner
        android:id="@+id/spinnerItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="33dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server"/>
    <Spinner
        android:id="@+id/spinnerServer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="33dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suggestions" />
    <EditText
        android:id="@+id/suggestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text ="@string/suggestion_for_server"/>

    <EditText
        android:id="@+id/tableNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      />
    <Button
        android:id="@+id/btndone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/done"
        android:layout_gravity="bottom"
        android:textColor="@color/white"
        android:background="@color/red"
       />

    <TextView
        android:id="@+id/thanks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:text="@string/thankyou"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:visibility="invisible"
        />
</LinearLayout>
