<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="20dp"
    tools:context="com.intellisense.review.activities.Personal_Info_activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:paddingBottom="20dp"
        android:text="@string/Personal_Information"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <TextView
            android:id="@+id/nameerror"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="*"
            android:textColor="@color/red"
            android:visibility="invisible"/>
    </LinearLayout>
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text|textPersonName"
        android:hint="@string/hintName"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"        />

    <EditText
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number|phone"
        android:hint="@string/hint_number"/>
    <TextView
              android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth" />

        <TextView
            android:id="@+id/DOB"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:paddingLeft="20dp"/>
        <ImageView
            android:id="@+id/btnbirth"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
           android:layout_gravity="right"
            android:src="@drawable/date_picker"
            />


    </LinearLayout>
<!--<Button-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content" />-->
<!--</LinearLayout>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:text="@string/anniversary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/anniversary"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:paddingLeft="22dp"
            android:textAlignment="textEnd"
            android:textColor="@color/red"
            android:textStyle="bold" />
    <ImageView
        android:id="@+id/btnanniversary"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
       android:layout_gravity="right"
        android:src="@drawable/date_picker" />
    </LinearLayout>
    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/red"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible" />
</LinearLayout>
