<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.intellisense.review.activities.CreateAccountActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="48dp">

            <!-- Admin Label -->
            <TextView
                android:text="@string/admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="28sp"
                android:fontFamily="sans-serif-light"
                android:layout_marginTop="24dp"/>

            <!-- Admin's Username Field -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/create_account_activity_admin_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Username"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <!-- Admin's Email Field -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/create_account_activity_admin_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <!-- Admin's Password Field -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/create_account_activity_admin_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/create_account_activity_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="12dp">

            </Spinner>

            <!-- Login Button -->
            <Button
                android:id="@+id/create_account_activity_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textColor="@android:color/white"
                android:backgroundTint="@color/colorPrimary"
                android:layout_marginTop="24dp"
                android:padding="18dp"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
